# plain2code_client

./: .flake8  .gitignore  LICENSE  Plain-language-specification.md  README.md  Starting_a_plain_project_from_scratch.md  Windows_Environment_Setup_for_Plain.md  api_client.py  codeplain_REST_api.py  concept_utils.py  diff_utils.py  event_bus.py  file_operations.py  file_utils.py  git_utils.py  hash_key.plain  hash_key.py  hello_world_golang.plain  hello_world_python.plain  install.sh  logging_setup.py  memory_management.py  module_renderer.py  plain2code.py  plain2code_arguments.py  plain2code_cli_documentation.md  plain2code_client.plain  plain2code_console.py  plain2code_events.py  plain2code_exceptions.py  plain2code_logger.py  plain2code_nodes.py  plain2code_read_config.py  plain2code_state.py  plain2code_utils.py  plain_file.py  plain_modules.py  plain_spec.py  pyproject.toml  pytest.ini  (+8 more)
.github/workflows/: lint-and-test.yml  nofity-slack-on-main-merge.yml  publish-install-script.yml  publish-to-pypi.yml
base_folder/: swagger.json
config/: __init__.py  system_config.yaml
docs/: cli.md  generate_cli.py  plain-language-specification.md  plain2code_cli.md  plain_language_specification.md  starting_a_plain_project_from_scratch.md
example_plain2code_client/base_folder/: swagger.json
examples/: run.sh
examples/example_hello_world_golang/: config.yaml  hello_world_golang.plain  run.sh
examples/example_hello_world_golang/harness_tests/: hello_world_test.go
examples/example_hello_world_python/: config.yaml  hello_world_python.plain  run.sh
examples/example_hello_world_python/harness_tests/hello_world_display/: test_hello_world.py
examples/example_hello_world_react/: config.yaml  hello_world_react.plain  run.sh
examples/example_hello_world_react/harness_tests/hello_world_display/: cypress.config.ts  (+2 more)
install/: examples.sh  install.sh  walkthrough.sh
plain2code_client_base/: swagger.yaml
platform_specifics/: Windows_environment_specifics.md
render_machine/: code_renderer.py  conformance_test_helpers.py  conformance_tests.py  implementation_code_helpers.py  render_context.py  render_types.py  render_utils.py  state_machine_config.py  states.py  triggers.py
render_machine/actions/: analyze_specification_ambiguity.py  base_action.py  commit_conformance_tests_changes.py  commit_implementation_code_changes.py  create_dist.py  exit_with_error.py  finish_functional_requirement.py  fix_conformance_test.py  fix_unit_tests.py  prepare_repositories.py  prepare_testing_environment.py  refactor_code.py  render_conformance_tests.py  render_functional_requirement.py  run_conformance_tests.py  run_unit_tests.py  summarize_conformance_tests.py
standard_template_library/: __init__.py  golang-console-app-template.plain  python-console-app-template.plain  typescript-react-app-boilerplate.plain  typescript-react-app-template.plain
test_scripts/: run_conformance_tests_cypress.sh  run_conformance_tests_golang.sh  run_conformance_tests_python.sh  run_e2e_tests_cypress.sh  run_e2e_tests_python.sh  run_unittests_golang.sh  run_unittests_python.sh  run_unittests_react.sh
tests/: conftest.py  test_git_utils.py  test_imports.py  test_plainfile.py  test_plainfileparser.py  test_plainspec.py  test_requires.py
tests/data/: simple.plain
tests/data/imports/: circular_imports_1.plain  circular_imports_2.plain  circular_imports_main.plain  diamond_import_1.plain  diamond_import_2.plain  diamond_import_common.plain  diamond_imports_main.plain  non_existent_import.plain
tests/data/plainfile/: duplicate_specification_heading.plain  invalid_specification_order.plain  missing_non_functional_requirements.plain  plain_source_with_absolute_link.plain  plain_source_with_url_link.plain  task_manager_with_reference_links.plain  without_non_functional_requirement.plain
tests/data/plainfileparser/: concept_validation_acceptance_tests.plain  concept_validation_acceptance_tests_nondefined.plain  concept_validation_defined_nondefined.plain  concept_validation_defined_nondefined_2.plain  concept_validation_definition.plain  concept_validation_noconcepts.plain  concept_validation_nonconcept.plain  concept_validation_nondefined.plain  concept_validation_redefinition.plain  concept_validation_several_concepts.plain  concept_validation_valid.plain  exported_concepts.plain  exported_concepts_base.plain  exported_concepts_example.plain  exported_concepts_missing.plain  exported_concepts_missing_example.plain  exported_concepts_nested.plain  exported_concepts_nested_example.plain  exported_concepts_transitive_example.plain  exported_concepts_transitive_l1.plain  exported_concepts_transitive_l2.plain  plain_file_parser_with_comments.plain  plain_file_with_comments_indented.plain  regular_plain_source.plain  required_concepts.plain  required_concepts_defs.plain  required_concepts_example.plain  required_concepts_l1.plain  required_concepts_l2.plain  required_concepts_missing.plain  required_concepts_module.plain  required_concepts_partial.plain  required_concepts_partial_duplicate.plain  topological_sort.plain  topological_sort_not_referenced.plain
tests/data/requires/: circular_requires_main.plain  circular_requires_sub.plain  diamond_requires_1.plain  diamond_requires_2.plain  diamond_requires_common.plain  diamond_requires_main.plain  independent_requires_1.plain  independent_requires_2.plain  independent_requires_main.plain  non_existent_require.plain  normal_requires_1.plain  normal_requires_2.plain  normal_requires_main.plain
tests/data/templates/: block_level_include.plain  code_variables.plain  header.plain  implement.plain  implement_2.plain  template_include.plain  test_hardest_problem.plain
tui/: __init__.py  components.py  models.py  plain2code_tui.py  state_handlers.py  styles.css  widget_helpers.py
(+2 files in other folders)
