[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeplain"
version = "0.2.1"
description = "Transform plain language specifications into working code"
readme = "README.md"
requires-python = "==3.11"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "python-liquid2==0.3.0",
    "mistletoe==1.3.0",
    "requests==2.32.3",
    "tiktoken==0.12.0",
    "PyYAML==6.0.2",
    "gitpython==3.1.42",
    "transitions==0.9.3",
    "textual==1.0.0",
    "rich==14.2.0",
    "python-frontmatter==1.1.0",
    "networkx==3.6.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "flake8==7.0.0",
    "black==24.2.0",
    "isort==5.13.2",
    "mypy==1.11.2",
]

[project.scripts]
codeplain = "plain2code:main"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "config/**/*",
    "render_machine/**/*",
    "standard_template_library/**/*",
    "tui/**/*"
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/(.git|.venv|dist|venv|.conda|tests/data)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip = [".git", ".venv", "dist", "venv", ".conda", "tests/data"]
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
disable_error_code = [
    "var-annotated",
    "import-untyped",
    "assignment",
    "return-value",
    "attr-defined",
    "no-redef",
    "func-returns-value",
    "override",
    "index",
    "union-attr",
    "valid-type",
    "misc",
    "operator",
    "unreachable",
    "has-type",
    "return",
    "type-arg",
]
exclude = [
    "^\\.git/",
    "^__pycache__/",
    "^\\.venv/",
    "^\\.env/",
    "^\\.conda/",
    "^build/",
    "^dist/",
    "^tests/",
    "^examples/",
    "^render_cache/",
    "^src/services/langsmith/",
    "^deploy/",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["tests/data"]